2003-10-07  Ryan Nunn  <colourles@users.sourceforge.net>
	* usecode/intrinsics.cc : Doing what needs doing (std)

2003-09-17  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: New opcode 0x52, CALLO, calls original
	usecode function if a version from patch replaced it.

2003-09-12  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Finish some scripts before
	purging them.  Fixes Test-O-Love bug.

2003-09-06  Jeff Freedman  <jeff@amy.nerble.net>

	* delobjs.cc: Adding a timestamp, so objects don't get deleted
	until they've been there a few minutes.

2003-09-01  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/animate.cc,gamemap.cc:  Check for 'sfx' objs. that aren't
	animated.  Black gate and vortex cube now have sound effects.

2003-08-31  Ryan Nunn  <colourles@users.sourceforge.net>
	* imagewin/scale.cc : Fixing 2xSaI (No mouse problems, should generally
	  look better)

2003-08-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* all: if we're GPL, don't refer to the LGPL for details.
	  (thanks to Colourless for spotting this one)

2003-08-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* intrinsics.cc: fix crash in get_npc_name
	* chunks.cc: don't delete non-temporary npc on cache_out

2003-08-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamemap.cc: enable WANT_MAP_CACHE_OUT permanently

2003-08-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* schedule.cc: don't create special potions in lab schedule

2003-08-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc, usecode/ucscriptop.h, actors.cc:  Schedule
	'resurrection' instead of doing it immediately.

2003-08-16  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/shapeinf.cc: Kludge:  Don't use sfx 123 for weapons in
	SI; use 61 instead.

2003-08-15  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapefile.cc (Image_file_info): Write out single-shape
	files correctly.